// version	1.12
// protoc.exe --cpp_out=.  vr.proto

syntax = "proto3";

option java_package = "com.oddmu.vrdreamer.proto";
option java_outer_classname = "MessageMsgProtos";


// ***	以下为中心接口，由网吧端调用	***

// 接  口：bool Authentication(AuthInfo info)		门店身份验证
// 返回值：如果验证失败，失败原因（“中心无此营业点”、“比如sign无效”）在Message.returnMsg里给出
message AuthInfo {
	int64 storeID = 1;	// 门店ID
	string when = 2;	// 当时的时间
	string sign = 3;	// 验证信息，大写hex编码的md5值。md5(storeID + when + key)，key="vr123dreamer"
}

// 接  口：Config GetConfig()	获取门店配置
message Config {	
	string storeName = 1;		// 门店名
	int32 freeMinutes = 2;		// 用户登录后，一开始不计费的时间（分钟）
	repeated Notification notices = 3;		// 公告
}
message Notification {		// 公告
	int32 type = 1;			// 公告类型（1：系统，2：公安，3：文化）
	string msg = 2;			// 公告内容
	bytes image = 3;		// 公告图片
	string Url = 4;			// url
}


// 接  口：PeriodPriceList GetPeriodPriceList()	获取门店所有时间段价格列表
message PeriodPriceList {	// 门店所有时间段价格列表
	repeated PeriodPrice periodPrices = 1;
}
// 某时间段的价格
message PeriodPrice {
	int32 timeKey = 1;
	PriceGroup priceGroup = 2;
}
// 价格组
message PriceGroup {
	string name = 2;	// 名称
	repeated Price prices = 3;	// 价格list
}
message Price {			// 价格，例：[10分钟10元][30分钟25元]
	int32 duration = 1;	// 时长，分钟
	int32 money = 2;	// 价格，元
}

// 接  口：bool BeginCharge(string openid)	开始计费

// 接  口：Bill Checkout(string openid)		用户结帐
message Bill {
	int32 balance = 1;		// 账户余额
	int32 consume = 2;		// 本次消费金额
	int32 duration = 3;		// 本次游戏时长
}


// ***	以下为网吧接口，由中心调用	***

// 接  口：bool UserLogin(UserInfo info)		用户登录
message UserInfo {
	int64 userID = 1;		// 用户ID
	string openid = 2;		// 用户openid
	string nickname = 3;	// 昵称
	bytes headImage = 4;	// 头像
	float balance = 5;		// 账户余额
	repeated Coupon coupons = 6;	// 代金卷
}
message Coupon {			// 代金卷，优惠卷
	int32 type = 1;			// 1:代金卷，2:优惠卷
	float price = 2;		// 面值
	float discounts = 3;	// 折扣
	string comment = 4;		// 使用说明
}





// ***	以下暂不用	***

// Center Api--由门店调用
// 获取门店列表:		StoreList GetStoreList(string adminId, string pswd)	// adminId:业主ID
// 添加设备:			bool AddDevice(DeviceInfo param)
// 获取门店活动:		Activity GetActivity()

// Store Api--由中心调用
// 远程控制:X 			bool RemoteControl(RemoteControl param)
// 更新门店配置:X		bool UpdateConfig(Config param)
// 更新门店价格策略:X	bool UpdatePricePolicy(PricePolicy param)
// 更新门店活动:X		bool UpdateActivity(Activity param)

// 门店列表
message StoreList {
	map<int32, string> stores = 1;	// 业主关联的所有门店列表<门店ID，门店名称>
}

// 设备
message DeviceInfo {
	int32 storeId = 1;		// 营业点ID
	string deviceId = 2;	// 设备ID, 初步先用Mac地址
	string deviceName = 3;	// 设备名
}

// 远程控制
message RemoteControl {
	int32 action = 1;	// 1:关机	2:重起	3:锁屏	4：执行命令
	int32 command = 2;	// 具体执行的命令
}

// 活动
message Activity {
	int32 type = 1;		// 1:关注微信	2:首次充值	3:充值
	Coupon coupon = 2;	// 代金卷，优惠卷
	string comment = 3;	// 例：关注微信送10元代金卷，首次充值送10元代金卷，充100送10元代金卷
}

